<resources>
    <string name="app_name">MS 8L Calculator</string>
    <string name="Infinity">Infinity</string>
    <string name="action_settings">Settings</string>
    <string name="C">C</string>
    <string name="percent">%</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="mrc">MRC</string>
    <string name="mMinus">M-</string>
    <string name="mPlus">M+</string>
    <string name="ac">AC</string>
    <string name="squareRoot">\u221A</string>
    <string name="backSpace">\u232B</string>
    <string name="divide">\u00F7</string>
    <string name="multi">\u00D7</string>
    <string name="error">Invalid Input</string>
</resources>
