<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.uwaterloo.ms8lcalculator.MainActivity"
    tools:showIn="@layout/activity_main"
    android:columnCount="4"
    >

    <TextView
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/display"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_rowWeight="4"
        android:background="@color/blue_gray_100"
        android:textColor="?attr/editTextColor"
        android:padding="@dimen/padding"
        android:elevation="@dimen/shadow"
        android:maxLength="10"
        android:textAlignment="viewEnd"
        android:textSize="40sp"/>

    <Button
        android:text="@string/percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/percent"
        android:layout_row="1"
        android:layout_column="2"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="@dimen/set_text_size"
        android:background="@color/blue_gray_400"
        android:textColor="@android:color/white"
        android:layout_margin="1dp"/>

    <Button
        android:text="@string/nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nine"
        android:layout_row="2"
        android:layout_column="2"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="@dimen/set_text_size"
        android:background="@color/blue_gray_400"
        android:textColor="@android:color/white"
        android:layout_margin="1dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/divide"
        android:layout_row="2"
        android:layout_column="3"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textAllCaps="false"
        android:text="@string/divide"
        android:textSize="@dimen/set_text_size"
        android:background="@color/blue_gray_400"
        android:textColor="@android:color/white"
        android:layout_margin="1dp"/>

    <Button
        android:text="@string/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/four"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="@dimen/set_text_size"
        android:background="@color/blue_gray_400"
        android:textColor="@android:color/white"
        android:layout_margin="1dp"/>

    <Button
        android:text="@string/six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/six"
        android:layout_row="3"
        android:layout_column="2"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="@dimen/set_text_size"
        android:background="@color/blue_gray_400"
        android:textColor="@android:color/white"
        android:layout_margin="1dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/multiply"
        android:layout_row="3"
        android:layout_column="3"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:text="@string/multi"
        android:textSize="@dimen/set_text_size"
        android:background="@color/blue_gray_400"
        android:textColor="@android:color/white"
        android:layout_margin="1dp"/>

    <Button
        android:text="@string/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/one"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="@dimen/set_text_size"
        android:background="@color/blue_gray_400"
        android:textColor="@android:color/white"
        android:layout_margin="1dp"/>

    <Button
        android:text="@string/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/two"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="@dimen/set_text_size"
        android:background="@color/blue_gray_400"
        android:textColor="@android:color/white"
        android:layout_margin="1dp"/>

    <Button
        android:text="@string/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/minus"
        android:layout_row="4"
        android:layout_column="3"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="@dimen/set_text_size"
        android:background="@color/blue_gray_400"
        android:textColor="@android:color/white"
        android:layout_margin="1dp"/>

    <Button
        android:text="@string/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/zero"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="@dimen/set_text_size"
        android:background="@color/blue_gray_400"
        android:textColor="@android:color/white"
        android:layout_margin="1dp"/>

    <Button
        android:text="@string/point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/point"
        android:layout_row="5"
        android:layout_column="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="@dimen/set_text_size"
        android:background="@color/blue_gray_400"
        android:textColor="@android:color/white"
        android:layout_margin="1dp"/>

    <Button
        android:text="@string/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/plus"
        android:layout_row="5"
        android:layout_column="3"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="@dimen/set_text_size"
        android:background="@color/blue_gray_400"
        android:textColor="@android:color/white"
        android:layout_margin="1dp"/>

    <Button
        android:text="@string/mMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mminus"
        android:layout_row="6"
        android:layout_column="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="@dimen/set_text_size"
        android:background="@color/blue_gray_400"
        android:textColor="@android:color/white"
        android:layout_margin="1dp"/>

    <Button
        android:text="@string/mPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mplus"
        android:layout_row="6"
        android:layout_column="2"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="@dimen/set_text_size"
        android:background="@color/blue_gray_400"
        android:textColor="@android:color/white"
        android:layout_margin="1dp"/>

    <Button
        android:text="@string/ac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/AC"
        android:layout_row="6"
        android:layout_column="3"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="@dimen/set_text_size"
        android:background="@color/blue_gray_400"
        android:textColor="@android:color/white"
        android:layout_margin="1dp"/>

    <Button
        android:text="@string/equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/equal"
        android:layout_row="5"
        android:layout_column="2"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="@dimen/set_text_size"
        android:background="@color/blue_gray_400"
        android:textColor="@android:color/white"
        android:layout_margin="1dp"/>

    <Button
        android:text="@string/mrc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mrc"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="@dimen/set_text_size"
        android:background="@color/blue_gray_400"
        android:textColor="@android:color/white"
        android:layout_margin="1dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backSpace"
        android:layout_row="1"
        android:layout_column="3"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:text="@string/backSpace"
        android:textSize="@dimen/set_text_size"
        android:background="@color/blue_gray_400"
        android:textColor="@android:color/white"
        android:layout_margin="1dp"/>

    <Button
        android:text="@string/seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seven"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="@dimen/set_text_size"
        android:background="@color/blue_gray_400"
        android:textColor="@android:color/white"
        android:layout_margin="1dp"/>

    <Button
        android:text="@string/eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eight"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="@dimen/set_text_size"
        android:background="@color/blue_gray_400"
        android:textColor="@android:color/white"
        android:layout_margin="1dp"/>

    <Button
        android:text="@string/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/three"
        android:layout_row="4"
        android:layout_column="2"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="@dimen/set_text_size"
        android:background="@color/blue_gray_400"
        android:textColor="@android:color/white"
        android:layout_margin="1dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/squareRoot"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:text="@string/squareRoot"
        android:textSize="@dimen/set_text_size"
        android:background="@color/blue_gray_400"
        android:textColorLink="@android:color/background_light"
        android:textColor="@android:color/white"
        android:layout_margin="1dp"/>

    <Button
        android:text="@string/C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/c"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="@dimen/set_text_size"
        android:background="@color/blue_gray_400"
        android:textColor="@android:color/white"
        android:layout_margin="1dp"/>

    <Button
        android:text="@string/five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/five"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="@dimen/set_text_size"
        android:background="@color/blue_gray_400"
        android:textColor="@android:color/white"
        android:layout_margin="1dp"/>


</GridLayout>
